name:                   yesod-auth-jwt
version:                0.1.0.0
synopsis:               Yesod authentication using JSON Web Tokens
homepage:               https://github.com/whittle/yesod-auth-jwt
license:                BSD3
license-file:           LICENSE
author:                 Jason Whittle
maintainer:             jason.whittle@gmail.com
copyright:              Copyright (c) 2016 Jason A. Whittle
category:               Yesod
build-type:             Simple
cabal-version:          >=1.10
description:            Please see README.md

extra-source-files:     LICENSE
                      , README.md
                      , stack.yaml

library
  default-language:     Haskell2010
  ghc-options:          -Wall
  build-depends:        base >= 4.7 && < 5
                      , aeson
                      , bytestring >= 0.10
                      , data-default >= 0.5
                      , exceptions >= 0.8
                      , http-types >= 0.9
                      , jose >= 0.4
                      , lens
                      , monad-control >= 1.0
                      , monad-time
                      , text >= 1.2
                      , transformers >= 0.4
                      , wai >= 3.2
                      , word8 >= 0.1
                      , yesod-core >= 1.4
                      , yesod-test >= 1.5
                      , yesod-test-additional >= 1.5.5

  hs-source-dirs:       src
  exposed-modules:      Yesod.Auth.Http.BearerToken
                      , Yesod.Auth.JOSE.Config
                      , Yesod.Auth.JOSE.TokenValidator
                      , Yesod.Test.Auth.JWTHelper
                      , Yesod.Test.Auth.JWTHelper.Additional

source-repository head
  type:                 git
  location:             https://github.com/whittle/yesod-auth-jwt
